--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         box-sizing: border-box;
         font-size: 16px;
       }
-      input[type="date"].input-field {
+      input[type="date"] {
         -webkit-appearance: none;
         appearance: none;
         width: 100%;
